# GPU_w_CNN

./: .gitignore  CMakeLists.txt  ConvProject  README.md
includes/: cnn.h  image.h
src/: conv.c  conv.cu  image.c  main.c
